--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   }
 }
