--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "cors": "^2.8.5",
+    "dns": "^0.2.2",
     "ethiopian-calendar-date-converter": "^1.0.2",
     "express": "^4.17.2",
     "helmet": "^5.0.1",
