--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
+    "netlify-lambda": "^2.0.15",
     "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "serverless-http": "^2.7.0"
   }
 }
