--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "cors": "^2.8.5",
-    "dns": "^0.2.2",
     "ethiopian-calendar-date-converter": "^1.0.2",
     "express": "^4.17.2",
     "helmet": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "nodemailer": "^6.7.2",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "serverless-http": "^2.7.0"
   }
 }
